# realtime-chat

./: .gitignore
backend/: .env.example  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1dfb81d0a4ac_init_all_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  conversations.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: conversation.py  conversationparticipant.py  friendship.py  message.py  profile.py  user.py
backend/app/repositories/: conversation.py  user.py
backend/app/schemas/: auth.py  conversation.py
backend/app/services/: conversation.py
backend/app/utils/: file_storage.py  time.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_conversation.py
